--- a/index.html
+++ b/index.html
@@ -7,27 +7,28 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Raleway&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="tabs.css">
     <link rel="stylesheet" href="awesome.css">
+    <link rel="stylesheet" href="footer.css">
     <title>AXIT</title>
 </head>
 <body>
     <div class="main">
 
         <div class="tabs">
-            <div class="tabs__div tabs__one">
-                <p class="tabs__div__p">TAB 1</p>
+            <div class="tab-selector tab__one">
+                <p class="tab-selector__text">TAB 1</p>
             </div>
-            <div class="tabs__div">
-                <p class="tabs__div__p">TAB 2</p>
+            <div class="tab-selector">
+                <p class="tab-selector__text">TAB 2</p>
             </div>
-            <div class="tabs__div">
-                <p class="tabs__div__p">TAB 3</p>
+            <div class="tab-selector">
+                <p class="tab-selector__text">TAB 3</p>
             </div>
 
             <div class="tabs-content">
                 <div class="left-part">
                     <div class="left-part__line"></div>
                     <div class="left-part__words">
-                        <h3 class="left-part__header">Tabs with soft transitioning effect.</h3>
+                        <h3 class="left-part__title">Tabs with soft transitioning effect.</h3>
                         <p class="left-part__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod 
                         bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra 
                         justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque 
@@ -55,40 +56,74 @@
         
 
         <div class="awesome">
-            <div class="awesome__header">
-                <h2 class="awesome__h2">WHY THIS IS AWESOME</h2>
-                <div class="awesome__line"></div>
+            <div class="block-why">
+                <h2 class="block-why__title">WHY THIS IS AWESOME</h2>
+                <div class="block-why__line"></div>
             </div>
 
             <p class="awesome__lorem">Lorem ipsum dolor sit amet, 
                 consectetur adipiscing elit.</p>
 
-            <div class="awesome__container">
-                <div class="awesome__container__cards">
-                    <img src="light.png" alt="" class="awesome__container__cards__img__one">
-                    <h3 class="awesome__container__h3__one">Thoughtful Design</h3>
-                    <p class="awesome__container__p card__two">Lorem ipsum dolor sit amet, consectetur adipiscing
+            <div class="awesome-container">
+                <div class="awesome-container__cards">
+                    <img src="light.png" alt="" class="awesome-container__cards__image-one">
+                    <h3 class="awesome-container__cards__title">Thoughtful Design</h3>
+                    <p class="awesome-container__cards__text">Lorem ipsum dolor sit amet, consectetur adipiscing
                         elit. Aenean euismod bibendum laoreet. Proin gravida  dolor sit amet 
                         lacus accumsan et viverra.</p>
                 </div>
 
-                <div class="awesome__container__cards">
-                    <img src="keyboard.png" alt="" class="awesome__container__cards__img__two">
-                    <h3 class="awesome__container__h3__two">Thoughtful Design</h3>
-                    <p class="awesome__container__p card__two">Lorem ipsum dolor sit amet, consectetur adipiscing
+                <div class="awesome-container__cards">
+                    <img src="keyboard.png" alt="" class="awesome__container__cards__image-two">
+                    <h3 class="awesome-container__cards__title">Thoughtful Design</h3>
+                    <p class="awesome-container__cards__text">Lorem ipsum dolor sit amet, consectetur adipiscing
                         elit. Aenean euismod bibendum laoreet. Proin gravida  dolor sit amet 
                         lacus accumsan et viverra.</p>
                 </div>
 
-                <div class="awesome__container__cards">
-                    <img src="lightning.png" alt="" class="awesome__container__cards__img__three">
-                    <h3 class="awesome__container__h3__three">Thoughtful Design</h3>
-                    <p class="awesome__container__p card__two">Lorem ipsum dolor sit amet, consectetur adipiscing
+                <div class="awesome-container__cards">
+                    <img src="lightning.png" alt="" class="awesome__container__cards__image-three">
+                    <h3 class="awesome-container__cards__title">Thoughtful Design</h3>
+                    <p class="awesome-container__cards__text">Lorem ipsum dolor sit amet, consectetur adipiscing
                         elit. Aenean euismod bibendum laoreet. Proin gravida  dolor sit amet 
                         lacus accumsan et viverra.</p>
                 </div>
             </div>
         </div>
     </div>
+
+    <footer>
+        <div class="social-links">
+            <div class="icon first-icon">
+                <a href="https://ru-ru.facebook.com/" class="icon-link"><img src="images/facebook_icon.png" alt="" class="icon__image"></a>
+            </div>
+
+            <div class="icon">
+                <a href="https://twitter.com/" class="icon-link"><img src="images/twitter_icon.png" alt="" class="icon__image"></a>
+            </div>
+
+            <div class="icon">
+                <a href="https://www.linkedin.com/" class="icon-link"><img src="images/linkedin_icon.png" alt="" class="icon__image"></a>
+            </div>
+
+            <div class="icon">
+                <a href="https://ru.pinterest.com/" class="icon-link"><img src="images/pinterest_icon.png" alt="" class="icon__image"></a>
+            </div>
+
+            <div class="icon">
+                <a href="https://www.instagram.com/?ysclid=l917zn0487371047619" class="icon-link"><img src="images/instagram_icon.png" alt="" class="icon__image"></a>
+            </div>
+
+            <div class="icon">
+                <a href="https://github.com/" class="icon-link"><img src="images/github_icon.png" alt="" class="icon__image"></a>
+            </div>
+
+            <div class="icon">
+                <img src="images/rss_icon.png" alt="" class="icon__image">
+            </div>
+        </div>
+
+        <p class="copyright-text">&copy 2015 Axure Themes</p>
+    </footer>
 </body>
 </html>
