Fixed footer, added customer and pricing sections

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Raleway&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="tabs.css">
     <link rel="stylesheet" href="awesome.css">
+    <link rel="stylesheet" href="prices.css">
+    <link rel="stylesheet" href="review.css">
     <link rel="stylesheet" href="footer.css">
     <title>AXIT</title>
 </head>
@@ -90,40 +92,175 @@
                 </div>
             </div>
         </div>
-    </div>
 
-    <footer>
-        <div class="social-links">
-            <div class="icon first-icon">
-                <a href="https://ru-ru.facebook.com/" class="icon-link"><img src="images/facebook_icon.png" alt="" class="icon__image"></a>
-            </div>
+        <div class="prices-container">
+            <div class="prices-content">
+                <h2 class="prices-container__title">PRICING OPTIONS</h2>
+                <div class="prices-line"></div>
+                <p class="prices-content__lorem">Lorem ipsum dolor sit amet, consectetur 
+                    adipiscing elit.</p>
 
-            <div class="icon">
-                <a href="https://twitter.com/" class="icon-link"><img src="images/twitter_icon.png" alt="" class="icon__image"></a>
-            </div>
+                <div class="tariffs">
+                    <div class="tarrif-card first-card">
+                        <div class="tarif-head">
+                            <h4 class="tarif-head__name">Basic</h4>
+                            <h3 class="tarif-head__price">$10</h3>
+                            <h5 class="tarif-head__information">Free for life</h5>
+                        </div>
 
-            <div class="icon">
-                <a href="https://www.linkedin.com/" class="icon-link"><img src="images/linkedin_icon.png" alt="" class="icon__image"></a>
-            </div>
+                        <div class="tarif-pluses">
+                            <ul class="list">
+                                <li class="list__data">1 gb of space</li>
+                                <li class="list__data">1 gb of space</li>
+                                <li class="list__data">1 gb of space</li>
+                                <li class="list__data">1 gb of space</li>
+                                <li class="list__data">1 gb of space</li>
+                                <li class="list__data">1 gb of space</li>
+                            </ul>
+                        </div>
+                    </div>
 
-            <div class="icon">
-                <a href="https://ru.pinterest.com/" class="icon-link"><img src="images/pinterest_icon.png" alt="" class="icon__image"></a>
-            </div>
+                    <div class="tarrif-card">
+                        <div class="tarif-head">
+                            <h4 class="tarif-head__name">Optima</h4>
+                            <h3 class="tarif-head__price">$20</h3>
+                            <h5 class="tarif-head__information">Free for life</h5>
+                        </div>
 
-            <div class="icon">
-                <a href="https://www.instagram.com/?ysclid=l917zn0487371047619" class="icon-link"><img src="images/instagram_icon.png" alt="" class="icon__image"></a>
-            </div>
+                        <div class="tarif-pluses">
+                            <ul class="list">
+                                <li class="list__data">1 gb of space</li>
+                                <li class="list__data">1 gb of space</li>
+                                <li class="list__data">1 gb of space</li>
+                                <li class="list__data">1 gb of space</li>
+                                <li class="list__data">1 gb of space</li>
+                                <li class="list__data">1 gb of space</li>
+                            </ul>
+                        </div>
+                    </div>
 
-            <div class="icon">
-                <a href="https://github.com/" class="icon-link"><img src="images/github_icon.png" alt="" class="icon__image"></a>
-            </div>
+                    <div class="tarrif-card first-card">
+                        <div class="tarif-head">
+                            <h4 class="tarif-head__name">Pro</h4>
+                            <h3 class="tarif-head__price">$30</h3>
+                            <h5 class="tarif-head__information">Free for life</h5>
+                        </div>
 
-            <div class="icon">
-                <img src="images/rss_icon.png" alt="" class="icon__image">
+                        <div class="tarif-pluses">
+                            <ul class="list">
+                                <li class="list__data">1 gb of space</li>
+                                <li class="list__data">1 gb of space</li>
+                                <li class="list__data">1 gb of space</li>
+                                <li class="list__data">1 gb of space</li>
+                                <li class="list__data">1 gb of space</li>
+                                <li class="list__data">1 gb of space</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
-        <p class="copyright-text">&copy 2015 Axure Themes</p>
+        <div class="customer-review">
+            <div class="what-saying">
+                <h2 class="what-saying__title">WHAT OUR CUSTOMERS ARE SAYING</h2>
+                <div class="prices-line"></div>
+                <p class="what-saying__lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+
+                <div class="reviews-container">
+                    <div class="review-card">
+                        <div class="review-text">
+                            <p class="review-text__lorem">Lorem ipsum dolor sit amet, 
+                                consectetur adipisicing elit. Doloribus 
+                                accusamus expedita repellat similique 
+                                odio aspernatur ex, architecto eaque 
+                                quo suscipit.</p>
+                        </div>
+                        <div class="triangle"><img src="images/triangle.png" alt=""></div>
+                        <div class="review-info">
+                            <div class="reviewer-photo"><img src="images/men_photo1.png" alt=""></div>
+                            <div class="reviewer-name">
+                                <p class="reviewer-name__first">Davis Rhiel Madsen</p>
+                                <p class="reviewer-name__job-title">Manager</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="review-card">
+                        <div class="review-text">
+                            <p class="review-text__lorem">Lorem ipsum dolor sit amet, 
+                                consectetur adipisicing elit. Doloribus 
+                                accusamus expedita repellat similique 
+                                odio aspernatur ex, architecto eaque 
+                                quo suscipit.</p>
+                        </div>
+                        <div class="triangle"><img src="images/triangle.png" alt=""></div>
+                        <div class="review-info">
+                            <div class="reviewer-photo"><img src="images/men-photo2.png" alt=""></div>
+                            <div class="reviewer-name">
+                                <p class="reviewer-name__first">Jaydon Rosser</p>
+                                <p class="reviewer-name__job-title">Manager</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="review-card">
+                        <div class="review-text">
+                            <p class="review-text__lorem">Lorem ipsum dolor sit amet, 
+                                consectetur adipisicing elit. Doloribus 
+                                accusamus expedita repellat similique 
+                                odio aspernatur ex, architecto eaque 
+                                quo suscipit.</p>
+                        </div>
+                        <div class="triangle"><img src="images/triangle.png" alt=""></div>
+                        <div class="review-info">
+                            <div class="reviewer-photo"><img src="images/men_photo3.png" alt=""></div>
+                            <div class="reviewer-name">
+                                <p class="reviewer-name__first">Cooper Dorwart</p>
+                                <p class="reviewer-name__job-title">Manager</p>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <footer>
+        <div class="site-bottom">
+            <div class="social-links">
+                <div class="icon first-icon">
+                    <a href="https://ru-ru.facebook.com/" class="icon-link"><img src="images/facebook_icon.png" alt="" class="icon__image"></a>
+                </div>
+
+                <div class="icon">
+                    <a href="https://twitter.com/" class="icon-link"><img src="images/twitter_icon.png" alt="" class="icon__image"></a>
+                </div>
+
+                <div class="icon">
+                    <a href="https://www.linkedin.com/" class="icon-link"><img src="images/linkedin_icon.png" alt="" class="icon__image"></a>
+                </div>
+
+                <div class="icon">
+                    <a href="https://ru.pinterest.com/" class="icon-link"><img src="images/pinterest_icon.png" alt="" class="icon__image"></a>
+                </div>
+
+                <div class="icon">
+                    <a href="https://www.instagram.com/?ysclid=l917zn0487371047619" class="icon-link"><img src="images/instagram_icon.png" alt="" class="icon__image"></a>
+                </div>
+
+                <div class="icon">
+                    <a href="https://github.com/" class="icon-link"><img src="images/github_icon.png" alt="" class="icon__image"></a>
+                </div>
+
+                <div class="icon">
+                    <img src="images/rss_icon.png" alt="" class="icon__image">
+                </div>
+            </div>
+
+            <p class="copyright-text">&copy 2015 Axure Themes</p>
+        </div>
     </footer>
 </body>
 </html>
